docs: restructure README.md with tool groups; document tool exposure config and semantic search
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>